# SCALED-Particle

./: .gitignore  LICENSE  README.md  data_processing.ipynb  data_processing.ipynb.ipynb  main.py  pyproject.toml
exp/01_conv/config/: config.yaml
exp/01_conv/long_rollout/: metrics.csv
exp/01_conv/onestep/: metrics.csv
exp/01_conv/rollout/: metrics.csv
exp/02_attn/config/: config.yaml
exp/02_attn/onestep/: metrics.csv
exp/02_attn/rollout/: metrics.csv
exp/03_conv_sfc/config/: config.yaml
exp/03_conv_sfc/onestep/: metrics.csv
exp/03_conv_sfc/rollout/: metrics.csv
exp/04_attn_sfc/config/: config.yaml
exp/04_attn_sfc/onestep/: metrics.csv
exp/04_attn_sfc/rollout/: metrics.csv
exp/1/config/: fludized_bed.yaml
exp/1/script/: train.sh
exp/exp1_add_attention/: eval.sh  train.sh
exp/exp1_add_attention/config/: exp1.yaml
exp/exp2_boundary/: eval.sh  inference.sh  train.sh
exp/exp2_boundary/config/: exp2.yaml
exp/exp2_boundary_continue/: train.sh
exp/exp2_boundary_continue/config/: exp2-continue.yaml
exp/exp3_complex_model/: train.sh
exp/exp3_complex_model/config/: exp3.yaml
exp/exp4_gtbc/: train.sh
exp/exp4_gtbc/config/: exp4.yaml
exp/exp5_conv/config/: exp.yaml
exp/exp6_conv_sfc/: config.yaml
exp/exp7_attn_sfc/: config.yaml
result/: summary.csv
result/stat/: stat.csv  stat_summary.csv
script/: benchmarking.sh  eval.sh  srun.sh  train.sh
src/scaled/model/: embeddings.py  (+6 more)
tools/inference/: inference.py
tools/trainning/: train.py  trainning_validation.py
tools/visualization/: viz_rollout.py  viz_rollout_comparation.py
(+29 files in other folders)
